legacy_versioned_docs/version-0.9/sdk-reference/context-and-task.mdx
---
sidebar_position: 2
tags:
    - LOC
    - Agent
    - Context
    - JavaScript
    - TypeScript
---

# Context and Task

Data **Context** is an object injected into logic functions at runtime, which containes some key components:

-   [Task](#task) and execution-related information
-   Trigger [payload](/legacy/0.9/sdk-reference/payload)

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";

#### Availability

-   ✓ Generic logic
-   ✓ Aggregator logic

## Context

> Type:
>
> -   `GenericContext` (generic logic)
> -   `AggregatorContext` (aggregator logic)

When a logic gets executed, a data context object `ctx` will be available in both `run` and `handleError` functions:

<Tabs>
  <TabItem value="ctx-js" label="JavaScript" default>

```javascript showLineNumbers
// highlight-next-line
export async function run(ctx) {
    // ctx is the data context
}

// highlight-next-line
export async function handleError(ctx, error) {
    // the same context as well as error
}
```

  </TabItem>
  <TabItem value="ctx-ts" label="TypeScript">

```typescript showLineNumbers
import { GenericContext, RailwayError } from "@fstnetwork/loc-logic-sdk";

// highlight-next-line
export async function run(ctx: GenericContext) {
    // ctx is the data context
}

// highlight-next-line
export async function handleError(ctx: GenericContext, error: RailwayError) {
    // the same context as well as error
}
```

  </TabItem>
</Tabs>

## Railway Error

> Type: `RailwayError`

`RailwayError` is a object extended from the standard `Error` class, which will be passed to `handleError()` upon an error occurred:

```typescript showLineNumbers
export async function handleError(ctx, error) {
    // ...
    const errorMessage = error.message; // error message
    const errorLogicId = error.logicPermanentIdentity; // the PID of the logic that have error occurred
    const errorLogicRevision = error.logicRevision; // the revision of the logic that have error occurred
}
```

See [Tips on Error Handling](/legacy/0.9/tutorials/error-handling-tip) for details on logic error handling.

## Task

> Type: `Task`

```typescript
export async function run(ctx) {
    // highlight-next-line
    const task = ctx.task;
}
```

A task is an execution of this particular data process invoked by a trigger. The `task` object is lazy-loaded and would include all related metadata to the logic context:

| Member                   | Type                                                          | Description                            |
| ------------------------ | ------------------------------------------------------------- | -------------------------------------- |
| `taskKey`                | `TaskKey`, which is `{ taskId: string, executionId: string }` | Task ID and execution ID               |
| `taskId` _(deprecated)_  | `taskId`, which is `{ id: string, executionId: string }`      | Task ID and execution ID               |
| `startTimestamp`         | `Date`                                                        | Task start datetime                    |
| `startAt` _(deprecated)_ | `Date`                                                        | Task start datetime                    |
| `dataProcess`            | [`VersionedIdentityContext`](#versioned-identity-context)     | Data process permanent ID              |
| `currentLogic?`          | `VersionedIdentityContext`                                    | Current logic permanent ID             |
| `executedLogics`         | `Array<VersionedIdentityContext>`                             | An array of identity of executed logic |

### Versioned Identity Context

Represents the identity of a logic or a data process:

| Member              | Type     | Description                     |
| ------------------- | -------- | ------------------------------- |
| `name`              | `string` | Name                            |
| `permanentIdentity` | `string` | Permanent identity string (PID) |
| `revision`          | `number` | Revision number                 |

#### Example

```typescript showLineNumbers
const taskId = ctx.task.taskKey.taskId;
const executionId = ctx.task.taskKey.executionId;

// you can still use the deprecated interfaces:
// const taskId = ctx.task.taskId.id;
// const executionId = ctx.task.taskId.executionId;

const dpPid = ctx.task.dataProcess.permanentIdentity;
const logicPid = ctx.task.currentLogic.permanentIdentity;
```
